# End-to-End-Trip-Planer-AI-Agent

./: .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  temp_Testing.py
agent/: agentic_workflow.py
backend/: Dockerfile.fastapi  app.py  requirements.txt
config/: config.yaml  currency_converter.py  model_loader.py  place_info_search.py  save_to_documnet.py
frontend/: Dockerfile.streamlit  streamlit.py
notebook/: experiment.ipynb
notebooks/: experiment.ipynb
prompt_library/: prompts.py
src/agent/: agentic_workflow.py
src/config/: config_loader.py  expense_calculator.py  model_loader.py  save_to_documnet.py  weather.py
src/exception/: __init__.py
src/logger/: __init__.py
src/prompt_library/: prompts.py
src/tools/: arithmetic_operation_tool.py  calculator.py  currency_converion_tool.py  place_search_tool.py  weather_tool.py
tools/: arithmetic_operation_tool.py  calculator.py  currency_converion_tool.py  place_search_tool.py  weather_tool.py
utils/: config_loader.py  model_loader.py  weather.py
