[project]
name = "trip-organizer-ai-agent-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langgraph>=0.5.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "from-root>=1.3.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-google-community[places]>=2.0.7",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.26",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.5.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "streamlit>=1.46.1",
    "trip-organizer-ai-agent-llmops",
    "uvicorn>=0.34.3",
]

[tool.uv.sources]
trip-organizer-ai-agent-llmops = { workspace = true }
